Feature/chat edit (#78)
* update webui dist

* support update conversation

* update webui dist

* support edit message

* fix edit message

* update webui dist

* update webui dist

* delete debug message
