# api/docs/apidocs.swagger.json
@@ -678,6 +678,99 @@
         "tags": [
           "Service"
         ]
+      },
+      "post": {
+        "operationId": "Service_UpdateMessage",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/servicev1Message"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of servicev1Message"
+            }
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "418": {
+            "description": "I'm a teapot.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {
+              "$ref": "common.ErrorResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "conversationId",
+            "description": "conversation_id uuid of the conversation",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "description": "id uuid of the message",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "model": {
+                  "type": "string",
+                  "title": "model model of the message"
+                },
+                "request": {
+                  "type": "string",
+                  "title": "request request of the message"
+                },
+                "temperature": {
+                  "type": "number",
+                  "format": "float",
+                  "title": "temperature What sampling temperature to use, between 0 and 2.\nHigher values like 0.8 will make the output more random, while lower values\nlike 0.2 will make it more focused and deterministic. default 1"
+                },
+                "maxTokens": {
+                  "type": "integer",
+                  "format": "int32",
+                  "title": "max_tokens The maximum number of tokens to generate in the chat completion.\ndefault 2000"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "Service"
+        ]
       }
     },
     "/v1/conversations/{id}": {
