# webui/src/lib/pb/server.pb.ts
@@ -55,6 +55,9 @@ export class Service {
   static CreateMessage(req: Servicev1Conversation.CreateMessageRequest, entityNotifier?: fm.NotifyStreamEntityArrival<Servicev1Conversation.Message>, initReq?: fm.InitReq): Promise<void> {
     return fm.fetchStreamingRequest<Servicev1Conversation.CreateMessageRequest, Servicev1Conversation.Message>(`/v1/conversations/${req["conversationId"]}/messages`, entityNotifier, {...initReq, method: "POST", body: JSON.stringify(req, fm.replacer)})
   }
+  static UpdateMessage(req: Servicev1Conversation.UpdateMessageRequest, entityNotifier?: fm.NotifyStreamEntityArrival<Servicev1Conversation.Message>, initReq?: fm.InitReq): Promise<void> {
+    return fm.fetchStreamingRequest<Servicev1Conversation.UpdateMessageRequest, Servicev1Conversation.Message>(`/v1/conversations/${req["conversationId"]}/messages/${req["id"]}`, entityNotifier, {...initReq, method: "POST", body: JSON.stringify(req, fm.replacer)})
+  }
   static GetMessage(req: Servicev1Conversation.GetMessageRequest, initReq?: fm.InitReq): Promise<Servicev1Conversation.Message> {
     return fm.fetchReq<Servicev1Conversation.GetMessageRequest, Servicev1Conversation.Message>(`/v1/conversations/${req["conversationId"]}/messages/${req["id"]}?${fm.renderURLSearchParams(req, ["conversationId", "id"])}`, {...initReq, method: "GET"})
   }
